# openalex-import

./: .gitignore  README.md  db-import.py  download-examples-each.py  flatten-openalex-jsonl.py  pyproject.toml
duckdb/: copy-openalex-csv.sql  openalex-duckdb-schema.sql
postgres/: copy-openalex-csv.sql  openalex-pg-schema.sql
