[project]
name = "openalex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb-engine>=0.15.0",
    "psycopg2>=2.9.10",
    "pyalex>=0.18",
    "sqlalchemy>=2.0.39",
    "tqdm>=4.67.1",
    "typer>=0.15.2",
]

[tool.pyright]
exclude = [".venv"]
venvPath = "."
venv = ".venv"
